--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "type": "module",
   "dependencies": {
     "express": "^4.18.2",
     "firebase": "^10.4.0"
