try again w routes only keeping '/'

--- a/vercel.json
+++ b/vercel.json
@@ -12,7 +12,7 @@
         "dest": "/api/advance_who_up_row.js"
       },
       { 
-        "src": "/index", 
+        "src": "/", 
         "dest": "/api/index.js" 
       },      
       { 
