--- a/vercel.json
+++ b/vercel.json
@@ -7,17 +7,9 @@
       }
     ],
     "routes": [
-      {
-        "src": "/advance_who_up_row",
-        "dest": "/api/advance_who_up_row.js"
-      },
-      { 
-        "src": "/", 
-        "dest": "/api/index.js" 
-      },      
-      { 
-        "src": "/doctor", 
-        "dest": "/public/doctor_view.html" 
-      }
+      { "src": "/api/(.*)", "dest": "/api/index.js" },
+      { "src": "/js/(.*)", "dest": "/public/js/$1" },
+      { "src": "/", "dest": "/api/index.js" }
     ]
+    
 }
