--- a/vercel.json
+++ b/vercel.json
@@ -8,7 +8,7 @@
     ],
     "routes": [
       { "src": "/api/(.*)", "dest": "/api/index.js" },
-      { "src": "/js/(.*)", "dest": "/public/js/$1" },
+      { "src": "/public/(.*)", "dest": "/api/index.js" },
       { "src": "/", "dest": "/api/index.js" }
     ]
     
