--- a/vercel.json
+++ b/vercel.json
@@ -8,8 +8,7 @@
     ],
     "routes": [
       { "src": "/api/(.*)", "dest": "/api/index.js" },
-      { "src": "/public/(.*)", "dest": "/api/index.js" },
-      { "src": "/", "dest": "/api/index.js" }
+      { "src": "/public/(.*)", "dest": "/api/index.js" }
     ]
     
 }
