--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
-    "firebase": "^10.4.0"
+    "firebase": "^10.4.0",
+    "luxon": "^3.4.3"
   }
 }
